[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "episodevault"
version = "0.2.3"
description = "Version control and lineage tracking for robot training episode data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fsspec>=2023.1.0",
    "s3fs>=2023.1.0",  
    "gcsfs>=2023.1.0",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "duckdb>=0.10",
    "deltalake>=0.17",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "xxhash>=3.4",
]

[project.optional-dependencies]
hub = [
    "huggingface_hub>=0.23",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
episodevault = "episodevault.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["episodevault*"]

[tool.setuptools]
license-files = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
